# multitenant-sayvai-ragapp

./: .env.example  .gitignore  Dockerfile  Langgchain_milvus.ipynb  README.md  activate.bat  agent.py  api.py  app.py  docker-compose.yaml  main.py  pyproject.toml  rag.py  run.bat
sayvai_rag/: __init__.py  agent.py  async_agent.py  config.py  milvus_vector_store.py  search.py  text_splitter.py
